Add instructions in Readme and add verbose arg